--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -97,3 +97,8 @@ commands:
     usage: /annouce {(annonce)}
     permission: essential.annouce
     aliases: [annonce]
+  invsee:
+    description: Inspecte l'inventaire d'un joueur en ligne
+    usage: /invsee (player)
+    permission: essential.invsee
+    aliases: [inventaire, invlook]
