Ajout de la commande endersee
Cette commande permet au modérateur du serveur d'inspecter et d'éditer l'enderchest d'un joueur en ligne

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -102,3 +102,8 @@ commands:
     usage: /invsee (player)
     permission: essential.invsee
     aliases: [inventaire, invlook]
+  endersee:
+    description: Inspecte l'enderchest d'un joueur en ligne
+    usage: /endersee (player)
+    permission: enssential.endersee
+    aliases: [enderchest, enderlook]
